<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.homepage.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:elevation="2dp"
            android:src="@drawable/ic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30" />

        <LinearLayout
            android:id="@+id/llPhone"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/sign_in_input_box_bg_new"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            app:layout_constraintTop_toBottomOf="@+id/ivIcon">

            <LinearLayout
                android:id="@+id/llCallingCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCallingCode"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="3dp"
                    android:lines="1"
                    android:text="@string/phone_chinese_code"
                    android:textColor="@color/colorBlack70"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/icon_arrow_down_black" />

                <View
                    android:layout_width="0.6dp"
                    android:layout_height="20.5dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorBlack16" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:digits="0123456789"
                android:ellipsize="end"
                android:hint="@string/phone_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="11"
                android:text="@={vm.phone}"
                android:textColor="@color/colorBlack70"
                android:textColorHint="@color/colorBlack16"
                android:textCursorDrawable="@color/colorBlack70"
                android:textSize="17sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sign_in_input_box_bg_new"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/llPhone">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:text="@={vm.password}"
                android:textColor="@color/colorBlack70"
                android:textColorHint="@color/colorBlack16"
                android:textCursorDrawable="@color/colorBlack70"
                android:textSize="17sp"
                tools:text="111111" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:background="@color/theme_light"
            android:enabled="@{vm.loginEnable}"
            android:gravity="center"
            android:text="@string/login_button"
            android:textColor="@color/colorBlack50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/clPassword"
            app:roundRadius="@{28}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
